--- a/index.html
+++ b/index.html
@@ -28,10 +28,29 @@
       <div class="flex">
         <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon" />
         <div class="description">Thunderstorm</div>
-        <h3> Site under devlopment</h3>
       </div>
       <div class="humidity">Humidity: 60%</div>
       <div class="wind">Wind Speed: 6.2 km/h</div>
+      <div style="position: fixed;
+02
+            bottom: 700px;
+03
+            left: 400px;
+04
+            z-index: 1000;
+05
+            font-size:70px;
+06
+            color: black;
+07
+            transform:rotate(-120 deg);
+08
+            opacity: 0.10;">
+09
+Site devloped by karunakaran v
+10
+</div>
+
     </div>
   </div>
 </body>
