--- a/index.html
+++ b/index.html
@@ -31,26 +31,9 @@
       </div>
       <div class="humidity">Humidity: 60%</div>
       <div class="wind">Wind Speed: 6.2 km/h</div>
-      <div style="position: fixed;
-02
-            bottom: 700px;
-03
-            left: 400px;
-04
-            z-index: 1000;
-05
-            font-size:70px;
-06
-            color: black;
-07
-            transform:rotate(-120 deg);
-08
-            opacity: 0.10;">
-09
+      <div style="position: fixed; bottom: 700px; left: 400px; z-index: 1000; font-size:70px; color: black; transform:rotate(-120 deg); opacity: 0.10;">
 Site devloped by karunakaran v
-10
 </div>
-
     </div>
   </div>
 </body>
