--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./beautification.css">
-  <script src="./script.js" defer></script>
+  <script src="./weatherFetcher.js.js" defer></script>
 </head>
 
 <body>
